<resources>
    <string name="app_name">BENTO</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Login</string>
    <string name="action_register">Register</string>
    <string name="forgot_password">forgot password?</string>
    <string name="email_text">Email: </string>
    <string name="passwd_text">Password: </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!--main_menu-->
    <string name="title_activity_main_menu">首頁</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--toolbar item-->
    <string name="search_title">搜尋</string>
    <string name="search_result">搜尋結果</string>
    <string name="shop_cart">購物車</string>
    <string name="explanation">說明</string>
    <string name="action_edit">編輯</string>
    <!--dialog-->
    <string name="want_to_logout">確定要登出？</string>
    <string name="cancel">取消</string>
    <string name="ok">OK</string>
    <!--側拉選單-->
    <string name="announcement">公告欄</string>
    <string name="goto_add_value">儲值</string>
    <string name="myMeal">我的餐點</string>
    <string name="purchase_record">訂單記錄</string>
    <string name="info_alert">通知</string>
    <string name="about">關於</string>
    <string name="feedback">反饋</string>
    <string name="logout">登出</string>
    <string name="money_record">金錢紀錄</string>
    <!--個人資料-->
    <string name="profile">個人資料</string>
    <string name="profile_account">帳號</string>
    <string name="profile_name">用戶名稱</string>
    <string name="profile_passward">修改密碼</string>
    <string name="profile_mail">信箱</string>
    <string name="profile_phone">電話</string>
    <string name="profile_modify">修改個人資料</string>
    <!--店家菜單設定-->
    <!--志願序設定-->
    <string-array name="store_list">
        <item>果峰小舖</item>
        <item>和風食堂</item>
        <item>武嶺水果</item>
        <item>冰品</item>
        <item>山雞肉飯</item>
    </string-array>
    <string name="store_option">店家</string>
    <string-array name="meal_list">
        <item>握壽司</item>
        <item>茶碗蒸</item>
        <item>刺身</item>
        <item>手卷</item>
        <item>鮭魚定食</item>
    </string-array>
    <string name="meal_option">菜色</string>
    <!--購物車-->
    <!--店家-->
    <string-array name="list_shopping_cart">
        <item>果峰小舖</item>
        <item>和風食堂</item>
        <item>冰品</item>
        <item>旗下燒烤</item>>
    </string-array>
    <!--餐點名稱-->
    <string-array name="list_shopping_cart_meal">
        <item>壽司</item>
        <item>雞腿便當</item>
        <item>芋頭綿綿冰</item>
        <item>烤雞翅</item>
    </string-array>
    <!--餐點數量-->
    <string-array name="list_shopping_cart_num">
        <item>1份</item>
        <item>2份</item>
        <item>4份</item>
        <item>3包</item>
    </string-array>

    <string name="announcement_content">這裡是公告欄的訊息！</string>
    <string name="explanation_content">這裡是放說明文字！</string>
    <string name="meal_detail">餐點詳細</string>
    <string name="deatil">詳細資訊</string>
    <string name="order_deatil">訂單資料</string>
    <string name="profile_remain">餘額</string>
    <string name="pwd_error">密碼錯誤！</string>
    <string name="pwd_error_check">密碼不相符！</string>
    <string name="profile_block">未銷帳</string>
    <string name="pwd_error_length">密碼長度不能少於6位</string>

</resources>
