<?xml version="1.0" encoding="utf-8"?>
<!--
    使用者 修改個人資訊
-->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aishalien.bento.profile_modify">

    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar_profile_modify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?actionBarSize"
        android:background="@color/colorPrimary"
        android:fitsSystemWindows="true"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:title="@string/profile_modify"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/ic_arrow_back_black_24dp">
    </android.support.v7.widget.Toolbar>

    <GridLayout
        android:paddingLeft="@dimen/padding_left_and_right"
        android:paddingRight="@dimen/padding_left_and_right"
        android:paddingTop="@dimen/padding_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_account" />
        <TextView
            android:id="@+id/proMod_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin" />

        <!--用戶名稱-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_name" />
        <EditText
            android:id="@+id/new_name"
            android:layout_width="@dimen/profile_editText_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin" />

        <!--信箱-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_mail" />
        <EditText
            android:id="@+id/new_email"
            android:layout_width="@dimen/profile_editText_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin" />

        <!--電話-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/profile_phone" />
        <EditText
            android:id="@+id/new_phone"
            android:layout_width="@dimen/profile_editText_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin" />

        <!--修改密碼與確認-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="輸入舊密碼" />
        <EditText
            android:id="@+id/old_password"
            android:layout_width="@dimen/profile_editText_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:inputType="textPassword"
            android:maxLength="20"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="輸入新密碼" />
        <EditText
            android:id="@+id/new_password"
            android:layout_width="@dimen/profile_editText_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:inputType="textPassword"
            android:maxLength="20" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="確認密碼" />
        <EditText
            android:id="@+id/check_new_pwd"
            android:layout_width="@dimen/profile_editText_width"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:inputType="textPassword"
            android:maxLength="20"/>
    </GridLayout>
</LinearLayout>
</ScrollView>